--- a/view/html/index.html
+++ b/view/html/index.html
@@ -16,7 +16,10 @@
     <textarea class="form-control" rows="5" placeholder='Get ready to be nucleotexted' ng-model='nucleotext'></textarea>
   </div>
   <div ng-controller = 'submitText'>
-    <button type="button" class="btn btn-primary" ng-click='submitText()'>Submit</button>
+    <button type="button" class="btn btn-primary" ng-click='convertToBinary()'>Submit</button>
+  </div>
+  <div ng-controller='binaryConvert'>
+    <div ng-bind='binaryText'></div>
   </div>
 </div>
 
@@ -24,5 +27,6 @@
 <script type="text/javascript" src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="textSubmit.js"></script>
+<script type="text/javascript" src="binaryConvert.js"></script>
 </body>
 </html>
