--- a/view/html/index.html
+++ b/view/html/index.html
@@ -16,17 +16,11 @@
   <div class="form-group">
     <textarea class="form-control" rows="5" placeholder='Get ready to be nucleotexted' ng-model='nucleotext'></textarea>
   </div>
-  <div ng-controller = 'submitText'>
+<!--   <div ng-controller = 'submitText'> -->
     <button type="button" class="btn btn-primary" ng-click='convertToBinary()'>Submit</button>
-  <div ng-show = 'binaryString' class="binaryString">
-    <h3>Binary</h3>
-    <div> {{binaryString}} </div>
-  </div>
-  <div ng-show = 'nucleotideString' class="nucleotideString">
-    <h3>Nucleotide Sequence</h3>
-    <div> 5'- {{nucleotideString}} -3'</div>
-  </div>
-  </div>
+  <gen-binary id='binary'></gen-binary>
+  <gen-nuc-string id='nuc'></gen-nuc-string>
+<!--   </div> -->
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
@@ -34,5 +28,6 @@
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="textSubmit.js"></script>
 <script type="text/javascript" src="binaryRender.js"></script>
+<script type="text/javascript" src="binaryDirective.js"></script>
 </body>
 </html>
