added checkboxes to begin to build out algorithm choices

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -1,9 +1,11 @@
-.binaryString {
-  width: 100%;
-  word-wrap: break-word;
+.wordwrap { 
+   white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */    
+   white-space: -pre-wrap;     /* Opera <7 */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
 }
 
-.nucleotideString {
-  width: 100%;
-  word-wrap: break-word;
+#binaryButton {
+  padding-right: 10px;
 }
