--- a/view/html/template/nucTemplate.html
+++ b/view/html/template/nucTemplate.html
@@ -1,4 +1,5 @@
-<div ng-show = 'nucleotideString' class="nucleotideString">
-  <h3>Nucleotide Sequence</h3>
-  <p> 5'- {{nucleotideString}} -3'</p>
+<div ng-show = 'nucleotideString'>
+  <h3>Nucleotide Sequence (5' &#x2192 3')</h3>
+  <p class="wordwrap">{{nucleotideString}}</p>
+  <p>Using the binary calculation algorithm, you have {{possibilitiesFixed}} possibilities!</p>
 </div>
