--- a/view/html/index.html
+++ b/view/html/index.html
@@ -4,23 +4,26 @@
   <title></title>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 <div class="container">
   <h1 class="text-center">nucleotext</h1>
   <p>nucleotext is a thought experiment that was inspired by an article I read from Harvard biologist George Church.  The most efficient storage system of information in the universe is DNA.  Now you can see what the day to day information you generate looks like as a single strand of DNA.</p> 
   <p>When you input your text, it is converted to binary, then to a nucleotide base.  0 is converted to an A or T, and 1 is converted to a G or C.</p>
-  <p>The nucleotide sequence is randomly generated using Math.random.  This means if you analyze the same text twice you can get two different DNA sequences.  The total amount of combinations your binary sequence can have is defined as f(x) = 2^x, where x is the length of your binary string.</p>
+  <p>The nucleotide sequence is randomly generated using Math.random.  This means if you analyze the same text twice you can get two different DNA sequences.  The total amount of combinations your nucleotide sequence can have is defined as f(x) = 2^x, where x is the length of your binary string.</p>
   <br>
   <br>
   <div class="form-group">
     <textarea class="form-control" rows="5" placeholder='Get ready to be nucleotexted' ng-model='nucleotext'></textarea>
   </div>
-<!--   <div ng-controller = 'submitText'> -->
+  <div class="radio">
     <button type="button" class="btn btn-primary" ng-click='convertToBinary()'>Submit</button>
-  <gen-binary id='binary'></gen-binary>
-  <gen-nuc-string id='nuc'></gen-nuc-string>
-<!--   </div> -->
+    <label class='pull-right'><input type="radio" name="optradio">Base 4 Calculation</label>      
+    <label class="pull-right" id="binaryButton"><input type="radio" name="optradio">Binary Calculation</label>
+  </div> 
+  <gen-binary></gen-binary>
+  <gen-nuc-string></gen-nuc-string>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
@@ -28,6 +31,5 @@
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="textSubmit.js"></script>
 <script type="text/javascript" src="binaryRender.js"></script>
-<script type="text/javascript" src="binaryDirective.js"></script>
 </body>
 </html>
