made options for binary nucleotide generation and base four generation

--- a/view/html/index.html
+++ b/view/html/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <h1 class="text-center">nucleotext</h1>
-  <p>nucleotext is a thought experiment that was inspired by an article I read from Harvard biologist George Church.  The most efficient storage system of information in the universe is DNA.  Now you can see what the day to day information you generate looks like as a single strand of DNA.</p> 
+  <p>nucleotext is a thought experiment that was inspired by an article I read from Harvard biologist George Church.  The most efficient storage system of information in the universe is DNA.  Now you can see what the day to day information you generate looks like as a single strand of DNA.</p>
   <p>When you input your text, it is converted to binary, then to a nucleotide base.  0 is converted to an A or T, and 1 is converted to a G or C.</p>
   <p>The nucleotide sequence is randomly generated using Math.random.  This means if you analyze the same text twice you can get two different DNA sequences.  The total amount of combinations your nucleotide sequence can have is defined as f(x) = 2^x, where x is the length of your binary string.</p>
   <br>
@@ -17,19 +17,20 @@
   <div class="form-group">
     <textarea class="form-control" rows="5" placeholder='Get ready to be nucleotexted' ng-model='nucleotext'></textarea>
   </div>
-  <div class="radio">
-    <button type="button" class="btn btn-primary" ng-click='convertToBinary()'>Submit</button>
-    <label class='pull-right'><input type="radio" name="optradio">Base 4 Calculation</label>      
-    <label class="pull-right" id="binaryButton"><input type="radio" name="optradio">Binary Calculation</label>
-  </div> 
+  <div ng-controller='selectAlg' class="radio">
+    <button type="button" class="btn btn-primary" ng-click='selectAlg()'>Submit</button>
+    <label class='pull-right'><input type="radio" ng-model='alg' value='baseFour' name="optradio">Base 4 Calculation</label>
+    <label class="pull-right" id="binaryButton"><input type="radio" ng-model='alg' value='binary' name="optradio">Binary Calculation</label>
+  </div>
   <gen-binary></gen-binary>
-  <gen-nuc-string></gen-nuc-string>
+  <gen-base-four></gen-base-four>
+  <gen-nuc-string-binary></gen-nuc-string-binary>
+  <gen-nuc-string-base-four></gen-nuc-string-base-four>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 <script type="text/javascript" src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="textSubmit.js"></script>
-<script type="text/javascript" src="binaryRender.js"></script>
 </body>
 </html>
