reworked binary calculation to store data in an object

--- a/view/html/index.html
+++ b/view/html/index.html
@@ -24,11 +24,12 @@
     <label><input type="radio" ng-model='alg' value='baseFour' name="optradio">Base 4 Calculation</label>
     <br /><br />
     <div ng-hide='chooseCalcMethod'>Please choose either binary or base four as your calculation method.</div>
+    <text-query></text-query>
+    <gen-binary></gen-binary>
+    <gen-nuc-string-binary></gen-nuc-string-binary>
+    <gen-base-four></gen-base-four>
+    <gen-nuc-string-base-four></gen-nuc-string-base-four>
   </div>
-  <gen-binary></gen-binary>
-  <gen-nuc-string-binary></gen-nuc-string-binary>
-  <gen-base-four></gen-base-four>
-  <gen-nuc-string-base-four></gen-nuc-string-base-four>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
