--- a/view/html/template/nucTemplate.html
+++ b/view/html/template/nucTemplate.html
@@ -1,5 +1,5 @@
 <div ng-show = 'nucleotideString'>
   <h3>Nucleotide Sequence (5' &#x2192 3')</h3>
-  <p class="wordwrap">{{nucleotideString}}</p>
-  <p>Using the binary calculation algorithm, you have {{possibilitiesFixed}} possibilities!</p>
+  <p class="wordwrap">{{queryData.nucleotideString}}</p>
+  <p>Using the binary calculation algorithm, you have {{queryData.possibilities}} possibilities!</p>
 </div>
