fixed error message when clicking submit with no text/calculation method

--- a/view/html/index.html
+++ b/view/html/index.html
@@ -23,7 +23,7 @@
     <label id="binaryPadding"><input type="radio" id='binaryButton' ng-model='alg' value='binary' name="optradio">Binary Calculation</label>
     <label><input type="radio" ng-model='alg' value='baseFour' name="optradio">Base 4 Calculation</label>
     <br /><br />
-    <div ng-hide='chooseCalcMethod'>Please choose either binary or base four as your calculation method.</div>
+    <div ng-hide='chooseCalcMethod'>Please enter text to be transformed and/or choose either binary or base four as your calculation method.</div>
     <text-query></text-query>
     <gen-binary></gen-binary>
     <gen-nuc-string-binary></gen-nuc-string-binary>
