--- a/view/html/index.html
+++ b/view/html/index.html
@@ -36,5 +36,6 @@
 <script type="text/javascript" src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="textSubmit.js"></script>
+<script type="text/javascript" src="directives.js"></script>
 </body>
 </html>
