incorporated database functionality for binary and base four, data renders to page from database info for data persistence

--- a/view/html/template/binaryTemplate.html
+++ b/view/html/template/binaryTemplate.html
@@ -1,4 +1,4 @@
 <div ng-show = 'binaryString'>
   <h3>Binary</h3>
-  <p class="wordwrap">{{queryData.binaryString}}</p>
+  <p class="wordwrap">{{res.baseString}}</p>
 </div>
