--- a/view/html/template/textQuery.html
+++ b/view/html/template/textQuery.html
@@ -1,4 +1,4 @@
 <div ng-show='showNucleotextString'>
   <h3>Nucleotext string</h3>
-  <p> {{queryData.nucleotext}} </p>
+  <p> {{res.nucleotext}} </p>
 </div>
