--- a/view/html/template/baseFour.html
+++ b/view/html/template/baseFour.html
@@ -1,4 +1,4 @@
 <div ng-show = 'baseFourString'>
   <h3>Base Four</h3>
-  <p class="wordwrap">{{queryData.baseFourString}}</p>
+  <p class="wordwrap">{{res.baseString}}</p>
 </div>
