--- a/view/html/template/nucTemplateBaseFour.html
+++ b/view/html/template/nucTemplateBaseFour.html
@@ -1,4 +1,4 @@
 <div ng-show = 'nucleotideStringBaseFour'>
   <h3>Nucleotide Sequence (5' &#x2192 3')</h3>
-  <p class="wordwrap">{{queryData.nucleotideString}}</p>
+  <p class="wordwrap">{{res.nucleotideSequence}}</p>
 </div>
