decoder renders text, cannot handle punctuation

--- a/view/html/template/decoder.html
+++ b/view/html/template/decoder.html
@@ -1,4 +1,4 @@
 <div ng-show = 'decoded'>
-  <h3>Base Four</h3>
-  <p class="wordwrap"> {{decodedString}} </p>
+  <h3>Decoder</h3>
+  <p class="wordwrap"> {{convertedString}} </p>
 </div>
