adding factory functions to code for modularity

--- a/view/html/index.html
+++ b/view/html/index.html
@@ -39,5 +39,6 @@
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="textSubmit.js"></script>
 <script type="text/javascript" src="directives.js"></script>
+<script type="text/javascript" src="conversionFunctions.js"></script>
 </body>
 </html>
